--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
+    "@types/next": "^8.0.5",
     "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "16.8.4",
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "yarn": "^1.16.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": "react-app"
