--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@types/node": "12.0.12",
     "@types/react": "^16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "next": "^8.1.0",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
@@ -39,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^2.0.2",
     "redux-devtools-extension": "^2.13.8"
   }
 }
