--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
+    "@types/lodash": "^4.14.136",
     "@types/next": "^8.0.5",
     "@types/node": "12.0.12",
     "@types/react": "^16.8.23",
@@ -11,6 +12,7 @@
     "@types/react-redux": "^7.1.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "lodash": "^4.17.14",
     "next": "^8.1.0",
     "next-redux-wrapper": "^3.0.0-alpha.3",
     "react": "^16.8.6",
